tests/conformance/errors/hof_callback_stack/input.dgm
fn mapper(x) {
  if (x == 2) {
    throw "boom"
  }
  return x
}

map([1, 2, 3], mapper)
